[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "tkgh001"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mahori", email = "4198737+mahori@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
tkgh001 = "tkgh001:main"
